Stop text overflowing the richtext preview pane

--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -1623,6 +1623,7 @@ a.button.submit {
       display: inline-block;
       padding: 20px;
       background-color: #f4f4ff;
+      overflow-x: scroll;
 
       &.loading {
         background-image: image-url("loading.gif");
